// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<style>
.S1 {
  color: rgba(0,102,153,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-color-j7kcqb r-cursor-1loqt21 r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-textDecorationLine-1ddef8g S1"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`2. with a very long byline 1`] = `
<style>
.S1 {
  color: rgba(0,102,153,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
}

.S2 {
  color: rgba(105,105,105,1.00);
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-color-j7kcqb r-cursor-1loqt21 r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-textDecorationLine-1ddef8g S1"
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div
    className="css-text-76zvg2 r-color-1khp51w r-flexDirection-18u37iz r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n S2"
  >
    , Environment Editor | 
  </div>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-color-j7kcqb r-cursor-1loqt21 r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-textDecorationLine-1ddef8g S1"
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div
    className="css-text-76zvg2 r-color-1khp51w r-flexDirection-18u37iz r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n S2"
  >
    , Environment Editor | 
  </div>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-color-j7kcqb r-cursor-1loqt21 r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-textDecorationLine-1ddef8g S1"
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div
    className="css-text-76zvg2 r-color-1khp51w r-flexDirection-18u37iz r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n S2"
  >
    , Environment Editor
  </div>
</div>
`;
